<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="?attr/cardBackgroundColor"
    app:cardCornerRadius="@dimen/dp_12"
    app:contentPadding="@dimen/dp_12"
    tools:layout_marginTop="@dimen/dp_16">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/avatarImageView"
                android:layout_width="@dimen/dp_32"
                android:layout_height="@dimen/dp_32"
                android:layout_marginEnd="@dimen/dp_12"
                android:layout_marginBottom="@dimen/dp_12"
                android:contentDescription="@string/image_description"
                android:src="@drawable/core_presentation_bg_poster_placeholder"
                app:shapeAppearanceOverlay="@style/MovieShows.ImageView.Rounded"
                tools:background="@color/darkBlueGray" />

            <TextView
                android:id="@+id/reviewerHeaderTextView"
                style="?attr/textAppearanceBody3"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dp_32"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:maxLines="2"
                android:textStyle="bold"
                tools:text="Author" />

        </LinearLayout>

        <RatingBar
            android:id="@+id/ratingBar"
            style="?android:attr/ratingBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_12"
            android:numStars="5"
            tools:rating="1" />

        <com.webtoonscorp.android.readmore.ReadMoreTextView
            android:id="@+id/reviewTextView"
            style="?attr/textAppearanceBody3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorLink="?android:attr/textColorLink"
            app:readLessText="@string/hide"
            app:readLessTextAppearance="?attr/textAppearanceBody3"
            app:readLessTextColor="?attr/accentTextColor"
            app:readLessTextStyle="bold"
            app:readMoreMaxLines="5"
            app:readMoreOverflow="ellipsis"
            app:readMoreText="@string/read_more"
            app:readMoreTextAppearance="?attr/textAppearanceBody3"
            app:readMoreTextColor="?attr/accentTextColor"
            app:readMoreTextStyle="bold"
            app:readMoreToggleArea="none"
            tools:text="Lorem ipsum dolor sit amet, consectetur
            adipiscing elit, sed do eiusmod tempor incididunt
            ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Lorem ipsum dolor sit amet, consectetur
            adipiscing elit, sed do eiusmod tempor incididunt
            ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat." />

    </LinearLayout>

</androidx.cardview.widget.CardView>