<?xml version="1.0" encoding="utf-8"?>
<com.ru.movieshows.core.presentation.views.ResultView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ru.movieshows.movies.presentation.movies.MoviesFragment">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <FrameLayout
                android:id="@+id/nowPlayingFrameLayout"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_220">

                <androidx.viewpager2.widget.ViewPager2
                    android:id="@+id/nowPlayingViewPager"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

                <com.tbuonomo.viewpagerdotsindicator.DotsIndicator
                    android:id="@+id/dotsIndicator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|bottom"
                    android:layout_margin="@dimen/dp_6"
                    app:dotsColor="?attr/defaultDotsColor"
                    app:dotsCornerRadius="@dimen/dp_8"
                    app:dotsSize="@dimen/dp_12"
                    app:dotsSpacing="4dp"
                    app:dotsWidthFactor="2.5"
                    app:progressMode="false"
                    app:selectedDotColor="?attr/defaultSelectedDotColor" />

            </FrameLayout>

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/genresTabLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/discoverMoviesConstraintLayout"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_260"
                android:layout_marginStart="@dimen/dp_16"
                android:layout_marginTop="@dimen/dp_16">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/discoverMoviesRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_260"
                    android:orientation="horizontal"
                    android:visibility="gone"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:listitem="@layout/movie_item" />

                <ProgressBar
                    android:id="@+id/discoverMoviesInPendingProgressBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <TextView
                    android:id="@+id/discoverMoviesFailureTextView"
                    style="?attr/textAppearanceBody1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_4"
                    android:textAlignment="center"
                    app:layout_constraintBottom_toTopOf="@id/discoverMoviesRetryButton"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_chainStyle="packed"
                    tools:text="message" />

                <Button
                    android:id="@+id/discoverMoviesRetryButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_12"
                    android:text="@string/retry"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/discoverMoviesFailureTextView"
                    app:layout_constraintVertical_bias="0" />

                <androidx.constraintlayout.widget.Group
                    android:id="@+id/discoverMoviesSuccessGroup"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:visibility="visible"
                    app:constraint_referenced_ids="discoverMoviesRecyclerView" />

                <androidx.constraintlayout.widget.Group
                    android:id="@+id/discoverMoviesPendingGroup"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:visibility="gone"
                    app:constraint_referenced_ids="discoverMoviesInPendingProgressBar" />

                <androidx.constraintlayout.widget.Group
                    android:id="@+id/discoverMoviesFailureGroup"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:visibility="gone"
                    app:constraint_referenced_ids="discoverMoviesFailureTextView, discoverMoviesRetryButton" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <RelativeLayout
                android:id="@+id/onAirTvShowsHeaderRelativeLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_16"
                android:layout_marginTop="@dimen/dp_16"
                android:layout_marginEnd="@dimen/dp_16">

                <TextView
                    android:id="@+id/upcomingMoviesTextView"
                    style="?attr/textAppearanceHeadline6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentBottom="true"
                    android:layout_centerVertical="true"
                    android:layout_toStartOf="@+id/showAllUpcomingVideosButton"
                    android:text="@string/upcoming"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/showAllUpcomingVideosButton"
                    style="?attr/textAppearanceBody3"
                    android:layout_marginStart="@dimen/dp_8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:text="@string/show_all"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@id/upcomingMoviesTextView" />

            </RelativeLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/upcomingMoviesRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_260"
                android:layout_marginStart="@dimen/dp_16"
                android:layout_marginTop="@dimen/dp_16"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/movie_item" />

            <RelativeLayout
                android:id="@+id/popularMoviesHeaderRelativeLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_16"
                android:layout_marginTop="@dimen/dp_8"
                android:layout_marginEnd="@dimen/dp_16">

                <TextView
                    android:id="@+id/popularMoviesTextView"
                    style="?attr/textAppearanceHeadline6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentBottom="true"
                    android:layout_centerVertical="true"
                    android:layout_toStartOf="@+id/showAllPopularVideosButton"
                    android:text="@string/popular"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/showAllPopularVideosButton"
                    style="?attr/textAppearanceBody3"
                    android:layout_marginStart="@dimen/dp_8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:text="@string/show_all"
                    android:textStyle="bold" />

            </RelativeLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/popularMoviesRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_260"
                android:layout_marginStart="@dimen/dp_16"
                android:layout_marginTop="@dimen/dp_16"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/movie_item" />

            <RelativeLayout
                android:id="@+id/topRatedHeaderRelativeLayout"
                style="?attr/textAppearanceHeadline6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_16"
                android:layout_marginTop="@dimen/dp_16"
                android:layout_marginEnd="@dimen/dp_16"
                android:textStyle="bold">

                <TextView
                    android:id="@+id/topRatedMoviesTextView"
                    style="?attr/textAppearanceHeadline6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentBottom="true"
                    android:layout_centerVertical="true"
                    android:layout_toStartOf="@+id/showAllTopRatedMoviesButton"
                    android:text="@string/top_rated"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/showAllTopRatedMoviesButton"
                    style="?attr/textAppearanceBody3"
                    android:layout_marginStart="@dimen/dp_8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:text="@string/show_all"
                    android:textStyle="bold" />

            </RelativeLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/topRatedMoviesRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_260"
                android:layout_marginStart="@dimen/dp_16"
                android:layout_marginTop="@dimen/dp_16"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/movie_item" />

        </LinearLayout>

    </ScrollView>

</com.ru.movieshows.core.presentation.views.ResultView>

